<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/feed_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:gravity="left"
        android:inputType="textUri"
        android:hint="@string/feed_hint"
        android:text="@string/feed_protocol_default"
        android:maxLength="100"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/feed_cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/feed_dialog_cancel"/>

        <Button
            android:id="@+id/feed_add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/feed_dialog_ok"/>

    </LinearLayout>

</LinearLayout>